Добавлена библиотека JavaFX и обновлён README.md